update<index.html>: update URL for this repository

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="my-0">
                 <span class="fs-1 fw-bolder mb-2 align-middle">SourceGit</span>
                 <span class="align-middle">
-                    <a href='https://gitee.com/sourcegit/SourceGit'><img src='https://gitee.com/sourcegit/SourceGit/badge/star.svg?theme=gray' alt='star'></img></a>
+                    <a href='https://gitee.com/sourcegit/sourcegit'><img src='https://gitee.com/sourcegit/sourcegit/badge/star.svg?theme=gray' alt='star'></img></a>
                 </span>
             </p>
             <p class="fs-5 fw-light mb-2">开源、轻量级、永久免费的Git图形客户端</p>
@@ -25,7 +25,7 @@
 
         <div class="row mt-4">
             <div class="d-flex justify-content-center">
-                <a href="https://gitee.com/sourcegit/SourceGit/releases" type="button"
+                <a href="https://gitee.com/sourcegit/sourcegit/releases" type="button"
                     class="btn btn-primary rounded-0">
                     <svg style="width: 1.1em;height: 1.1em;vertical-align: middle;fill: currentColor;overflow: hidden;"
                         viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="7210">
@@ -66,7 +66,7 @@
         </div>
 
         <div class="position-absolute top-0 end-0">
-            <a href='https://gitee.com/sourcegit/SourceGit'><img src='https://gitee.com/sourcegit/SourceGit/widgets/widget_1.svg' alt='Fork me on Gitee'></img></a>
+            <a href='https://gitee.com/sourcegit/sourcegit'><img src='https://gitee.com/sourcegit/sourcegit/widgets/widget_1.svg' alt='Fork me on Gitee'></img></a>
         </div>
     </div>
 
